welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: not found: value k
		if(nums(k)==6 && nums(k)==nums(k+1)){
                        ^array667:10: error: not found: value k
		if(nums(k)==6 && nums(k)==nums(k)+1){
                        ^